Ajout Langages & Frameworks

--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
     </div>
   </header>
 
+  <section id="langages">
+    <h3>Langages & frameworks</h3>
+    <div>
+      <div class="bar"><img src="./media/html.png" alt="html-icon"> HTML</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #E23D00"> 40%</div>
+      </div>
+
+      <div class="bar"><img src="./media/css.png" alt="css-icon"> CSS</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #1B84C2"> 40%</div>
+      </div>
+
+      <div class="bar"><img src="./media/js.png" alt="javascript-icon"> JAVASCRIPT</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%; background-color: #EFD81D"> 20%</div>
+      </div>
+
+      <div class="bar"><img src="./media/bootstrap.png" alt="bootstrap-icon"> BOOTSTRAP</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%; background-color: #58407E"> 15%</div>
+      </div>
+
+      <div class="bar"><img src="./media/sass.png" alt="sass-icon"> SASS</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%; background-color: #C96195"> 15%</div>
+      </div>
+
+      <div class="bar"><img src="./media/git.png" alt="git-icon"> GIT</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%; background-color: #F05033"> 25%</div>
+      </div>
+
+      <div class="bar"><img src="./media/GitHub.png" alt="gitHub-icon"> GITHUB</div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%; background-color: #1C191B"> 35%</div>
+      </div>
+    </div>
+  </section>
+
 
 
   <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
