--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
     </div>
   </section>
 
+  <section id="formation">
+    <h3>FORMATION</h3>
+
+    <div>
+      <div id="autodidacte">
+        <h4><i class="fa fa-university"></i> Apprensissage autodidacte</h4>
+        <div class="counter">
+          <div class="data">
+            <div class="counter-value" data-count="">0</div>
+            <span>Heures de code</span>
+          </div>
+          <div class="data">
+            <div class="counter-value" data-count="">0</div>
+            <span>Projets réalisés</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div id="ocr">
+        <h4><i class="fa fa-university"></i> OpenClassRooms</h4>
+        <div class="counter">
+          <div class="data">
+            <div class="counter-value" data-count="">0</div>
+            <span>Cours suivis</span>
+          </div>
+          <div class="data">
+            <div class="counter-value" data-count="">0</div>
+            <span>Certificats</span>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </section>
+
 
 
   <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
