Ajout Fonction compteur live

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div>
       <div class="bar"><img src="./media/html.png" alt="html-icon"> HTML</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #E23D00"> 40%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #E34C26"> 40%</div>
       </div>
 
       <div class="bar"><img src="./media/css.png" alt="css-icon"> CSS</div>
@@ -104,11 +104,11 @@
         <h4><i class="fa fa-university"></i> Apprensissage autodidacte</h4>
         <div class="counter">
           <div class="data">
-            <div class="counter-value" data-count="">0</div>
+            <div class="counter-value" data-count="677">0</div>
             <span>Heures de code</span>
           </div>
           <div class="data">
-            <div class="counter-value" data-count="">0</div>
+            <div class="counter-value" data-count="4">0</div>
             <span>Projets réalisés</span>
           </div>
         </div>
@@ -120,11 +120,11 @@
         <h4><i class="fa fa-university"></i> OpenClassRooms</h4>
         <div class="counter">
           <div class="data">
-            <div class="counter-value" data-count="">0</div>
+            <div class="counter-value" data-count="21">0</div>
             <span>Cours suivis</span>
           </div>
           <div class="data">
-            <div class="counter-value" data-count="">0</div>
+            <div class="counter-value" data-count="15">0</div>
             <span>Certificats</span>
           </div>
         </div>
