--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./media/icon.png">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/aos/aos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
@@ -32,9 +33,19 @@
       </div>
     </nav>
     <div>
-      <h1>Mélissa robert</h1>
+      <h1 class="aos-item" 
+          data-aos="fade-down"
+          data-aos-offset="200"
+          data-aos-delay="500"
+          data-aos-duration="1000"
+          data-aos-once="false">Mélissa robert</h1>
       <div id="line"></div>
-      <h2>Recherche alternance Dév Web</h2>
+      <h2 class="aos-item" 
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-once="false">Recherche alternance Dév Web</h2>
 
       <div class="container">
         <div class="row presentation">
@@ -56,7 +67,13 @@
     </div>
   </header>
 
-  <section id="langages">
+  <section id="langages"
+            class="aos-item" 
+            data-aos="fade-down-right"
+            data-aos-offset="300"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-once="true">
     <h3>Langages & frameworks</h3>
     <div>
       <div class="bar"><img src="./media/html.png" alt="html-icon"> HTML</div>
@@ -96,10 +113,21 @@
     </div>
   </section>
 
-  <section id="formation">
+  <section id="formation"
+            class="aos-item" 
+            data-aos="fade-up-left"
+            data-aos-offset="100"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-once="true">
     <h3>FORMATION</h3>
 
-    <div>
+    <div class="aos-item" 
+          data-aos="zoom-in-left"
+          data-aos-offset="400"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-once="true"> 
       <div id="autodidacte">
         <h4><i class="fa fa-university"></i> Apprensissage autodidacte</h4>
         <div class="counter">
@@ -115,7 +143,12 @@
       </div>
     </div>
 
-    <div>
+    <div class="aos-item" 
+          data-aos="zoom-out-right"
+          data-aos-offset="200"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-once="true">
       <div id="ocr">
         <h4><i class="fa fa-university"></i> OpenClassRooms</h4>
         <div class="counter">
@@ -132,10 +165,61 @@
     </div> 
   </section>
 
+  <section id="parcours">
+    <h3>Parcours</h3>
+    <div>
+      <div class="timeline">
+        <div class="aos-item" 
+              data-aos="fade-down-right"
+              data-aos-duration="200"
+              data-aos-once="false">
+          <h4>Prep' Apprentisage "Développeur Web" - Openclassrooms</h4>
+          <h6>Mars 2021 - Ce jour</h6>
+          <p>Projet validé : intégrer une maquette en site web</p> 
+          Compétences évaluées :  • Utiliser un système de gestion de versions pour le suivi du projet et son hébergement, • mettre en place son environnement Front-End, • intégrer du contenu conformément à une maquette, • Implémenter une interface responsive </p>
+        </div>
+      </div>
+    
+      <div class="timeline">
+        <div class="aos-item" 
+              data-aos="fade-up-left"
+              data-aos-duration="400"
+              data-aos-once="false">
+          <h4>Agent de surveillance de la voie publique - Mairie</h4>
+          <h6>2014 - 2017</h6>
+          <p>•	Surveillance et relevé des infractions relatives à l’arrêt, au stationnement et au règlement sanitaire départemental, •	Rédaction d’écrits professionnels, •	 Accueil du public.</p> 
+        </div>
+      </div>
+
+      <div class="timeline">
+        <div class="aos-item" 
+              data-aos="fade-right"
+              data-aos-duration="600"
+              data-aos-once="false">
+          <h4>Transmetteur, Militaire du rang - Armée de Terre</h4>
+          <h6>2012 - 2013</h6>
+          <p> •	implanter et exploiter une station tactique de télécommunications, •	assurer l’exploitation et le fonctionnement des équipements informatiques et télécoms.</p> 
+        </div>
+      </div>
+
+      <div class="timeline">
+        <div class="aos-item" 
+              data-aos="flip-up"
+              data-aos-duration="800"
+              data-aos-once="false">
+          <h4>Serveuse polyvalente - le sablons</h4>
+          <h6>2009 - 2011</h6>
+          <p>•	Bar - PMU - Restaurant 50 couverts</p> 
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
   <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
   <script src="./assets/js/typed.min.js" type="text/javascript"></script>
+  <script src="./assets/aos/aos.js" type="text/javascript"></script>
   <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
