--- a/media/portfolio/P.2/blog.html
+++ b/media/portfolio/P.2/blog.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Les blog ultime sur le permalculture, apprendre et comprendre</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
 </head>
 <body>
-  <h1>Blog</h1>
-  <a href="index.html">Revenir à l'accueil</a>
-  
+    <h1>Blog</h1>
+    <a href="index.html">Revenir à l'accueil</a>
 </body>
 </html>
