--- a/index.html
+++ b/index.html
@@ -78,27 +78,27 @@
     <div>
       <div class="bar"><img src="./media/html.png" alt="html-icon"> HTML</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #E34C26"> 40%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="52" aria-valuemin="0" aria-valuemax="100" style="width: 52%; background-color: #E34C26"> 52%</div>
       </div>
 
       <div class="bar"><img src="./media/css.png" alt="css-icon"> CSS</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%; background-color: #1B84C2"> 40%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="48" aria-valuemin="0" aria-valuemax="100" style="width: 48%; background-color: #1B84C2"> 48%</div>
       </div>
 
       <div class="bar"><img src="./media/js.png" alt="javascript-icon"> JAVASCRIPT</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%; background-color: #EFD81D"> 20%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="14" aria-valuemin="0" aria-valuemax="100" style="width: 14%; background-color: #EFD81D"> 14%</div>
       </div>
 
       <div class="bar"><img src="./media/bootstrap.png" alt="bootstrap-icon"> BOOTSTRAP</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%; background-color: #58407E"> 15%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="22" aria-valuemin="0" aria-valuemax="100" style="width: 22%; background-color: #58407E"> 22%</div>
       </div>
 
       <div class="bar"><img src="./media/sass.png" alt="sass-icon"> SASS</div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%; background-color: #C96195"> 15%</div>
+        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="18" aria-valuemin="0" aria-valuemax="100" style="width: 18%; background-color: #C96195"> 18%</div>
       </div>
 
       <div class="bar"><img src="./media/git.png" alt="git-icon"> GIT</div>
@@ -132,7 +132,7 @@
         <h4><i class="fa fa-university"></i> Apprensissage autodidacte</h4>
         <div class="counter">
           <div class="data">
-            <div class="counter-value" data-count="677">0</div>
+            <div class="counter-value" data-count="680">0</div>
             <span>Heures de code</span>
           </div>
           <div class="data">
@@ -176,7 +176,7 @@
           <h4>Prep' Apprentisage "Développeur Web" - Openclassrooms</h4>
           <h6>Mars 2021 - Ce jour</h6>
           <p>Projet validé : intégrer une maquette en site web</p> 
-          Compétences évaluées :  • Utiliser un système de gestion de versions pour le suivi du projet et son hébergement, • mettre en place son environnement Front-End, • intégrer du contenu conformément à une maquette, • Implémenter une interface responsive </p>
+          Compétences évaluées :  • Utiliser un système de gestion de versions pour le suivi du projet et son hébergement, • Mettre en place son environnement Front-End, • Intégrer du contenu conformément à une maquette, • Implémenter une interface responsive </p>
         </div>
       </div>
     
@@ -185,7 +185,7 @@
               data-aos="fade-up-left"
               data-aos-duration="400"
               data-aos-once="false">
-          <h4>Agent de surveillance de la voie publique - Mairie</h4>
+          <h4>Agent de surveillance de la voie publique - collectivité territoriale</h4>
           <h6>2014 - 2017</h6>
           <p>•	Surveillance et relevé des infractions relatives à l’arrêt, au stationnement et au règlement sanitaire départemental, •	Rédaction d’écrits professionnels, •	 Accueil du public.</p> 
         </div>
@@ -198,7 +198,7 @@
               data-aos-once="false">
           <h4>Transmetteur, Militaire du rang - Armée de Terre</h4>
           <h6>2012 - 2013</h6>
-          <p> •	implanter et exploiter une station tactique de télécommunications, •	assurer l’exploitation et le fonctionnement des équipements informatiques et télécoms.</p> 
+          <p> •	Implanter et exploiter une station tactique de télécommunications, •	Assurer l’exploitation et le fonctionnement des équipements informatiques et télécoms.</p> 
         </div>
       </div>
 
@@ -212,6 +212,57 @@
           <p>•	Bar - PMU - Restaurant 50 couverts</p> 
         </div>
       </div>
+    </div>
+  </section>
+
+  <section id="portfolio">
+    <h3>Portfolio</h3>
+    <div>
+
+      <div class="projet">
+        <div class="cadre">
+          <div class="img-container">
+            <a href="./media/portfolio/P.1/index.html"target="_blank">
+              <img src="./media/projet-1.jpg" alt="projet-1">
+            </a>
+          </div>
+        </div>
+        <div class="legende">
+          <h4><img src="./media/html.png" alt="html"> <img src="./media/css.png" alt="css"> Intégrer une maquette en site web</h4>
+          <p> A l'aide des maquettes desktop et mobiles du site Reservia créer un site web et implémenter une interface responsive </p>
+          <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
+        </div>
+      </div>
+      <div class="projet">
+        <div class="cadre">
+          <div class="img-container">
+            <a href="./media/portfolio/P.2/index.html"target="_blank">
+              <img src="./media/projet-2.jpg" alt="projet-2">
+            </a>
+          </div>
+        </div>
+        <div class="legende">
+          <h4><img src="./media/bootstrap.png" alt="bootstrap"> <img src="./media/html.png" alt="html"> <img src="./media/css.png" alt="css"> Site E-commerce</h4>
+          <p>Réalisation d'un site e-commerce avec le framework bootstrap</p>
+          <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
+        </div>
+      </div>
+      <div class="projet">
+        <div class="cadre">
+          <div class="img-container">
+            <a href="./media/portfolio/P.3/index.html"target="_blank">
+              <img src="./media/projet-3.jpg" alt="projet-3">
+            </a>
+          </div>
+        </div>
+        <div class="legende">
+          <h4> <img src="./media/sass.png" alt="sass"> <img src="./media/js.png" alt="js"> <img src="./media/html.png" alt="html"> <img src="./media/css.png" alt="css"> Site vitrine pour agence spatial</h4>
+          <p>Réalisation d'un site avec l'aide de SASS et JavaScript</p>
+          <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
+        </div>
+      </div>
+
+
     </div>
   </section>
 
