--- a/media/portfolio/P.2/index.html
+++ b/media/portfolio/P.2/index.html
@@ -1,121 +1,117 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="robots" content="none" />
-  
-  <title>Permaculture, de A à Z, tout apprendre de zéro, cultiver, planter, consommer</title>
-  <meta name="description" content="Tout savoir sur la Permaculture, bien débuter, apprendre à semer, choisir ses produits et savourer ses propres légumes. Cultiver n'a jamais été aussi facile !">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Permaculture, de A à Z</title>
 
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./bootstrap.css">
 
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-sm bg-success fixed-top">
-      <div class="collapse navbar-collapse">
-        <a href="#" class="nav-item"><img src="./media/logo.png" alt=""></a>
-        <a href="blog.html" class="nav-item nav-link">Blog</a>
-        <a href="boutique.html" class="nav-item nav-link">Boutique</a>
-        <a href="contact.html" class="nav-item nav-link">Contact</a>
-      </div>
-    </nav>
-
-    <h1>Permaculture, <br> de A à Z</h1>
-  </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-9" id="leftPart">
-
-          <h2>Découvrez nos meilleurs produits</h2>
-
-          <div class="container">
-            <div class="row elements">
-              <div class="col-sm-4">
-                <img src="./media/planter.jpg" alt="planter">
-              </div>
-              <div class="col-sm-8">
-                <h3>Planter</h3>
-                <p>Lorem ipsum <strong>dolor sit amet consectetur</strong> adipisicing elit. Maiores sequi perspiciatis nobis laboriosam nulla est ex possimus, autem enim. Nemo <em>repellendus assumenda</em> alias iste, exercitationem distinctio. Possimus et perspiciatis numquam distinctio veniam.</p>
-                <div class="button">
-                  <button class="btn btn-success">Savoir quand planter...</button>
-                </div>
-              </div>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-success fixed-top">
+            <div class="collapse navbar-collapse">
+                <a href="#" class="nav-item"><img src="./media/logo.png" alt="logo"></a>
+                <a href="blog.html" class="nav-item nav-link">Blog</a>
+                <a href="boutique.html" class="nav-item nav-link">Boutique</a>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
+        </nav>
+        <h1>Permaculture, <br> de A à Z</h1>
+    </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9" id="leftPart">
+                    
+                    <h2>Découvrez nos meilleurs produits</h2>
 
-            <div class="row elements">
-              <div class="col-sm-4">
-                <img src="./media/cultiver.jpg" alt="cultiver">
-              </div>
-              <div class="col-sm-8">
-                <h3>Cultiver</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo quidem nesciunt nostrum autem pariatur itaque exercitationem illum maiores, mollitia deserunt temporibus labore, omnis aliquid, consectetur veritatis possimus repellendus.</p>
-                <div class="button">
-                  <button class="btn btn-success">Apprendre à mieux cultiver...</button>
-                </div>
-              </div>
-            </div>
+                    <div class="container">
+                        <div class="row elements">
+                            <div class="col-sm-4">
+                                <img src="./media/planter.jpg" alt="planter">
+                            </div>
+                            <div class="col-sm-8">
+                                <h3>Planter</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda voluptate, vel, consequuntur repudiandae non veritatis ipsum quis earum magnam iusto nulla officiis fugit recusandae adipisci quas quibusdam. Praesentium sed molestias eum quia.</p>
+                                <div class="button">
+                                    <button class="btn btn-success">Savoir quand planter...</button>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="row elements">
-              <div class="col-sm-4">
-                <img src="./media/savourer.jpg" alt="savourer">
-              </div>
-              <div class="col-sm-8">
-                <h3>Savourer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sequi perspiciatis nobis laboriosam nulla est ex possimus, autem enim. Nemo repellendus assumenda alias iste, exercitationem distinctio. Possimus et perspiciatis numquam distinctio veniam.</p>
-                <div class="button">
-                  <button class="btn btn-success">Déguster ses propres légumes...</button>
+                        <div class="row elements">
+                            <div class="col-sm-4">
+                                <img src="./media/cultiver.jpg" alt="cultiver">
+                            </div>
+                            <div class="col-sm-8">
+                                <h3>Cultiver</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis est incidunt dolorum nisi quae neque, expedita officia? Illum atque sit nemo et doloremque alias saepe ab aspernatur quis.</p>
+                                <div class="button">
+                                    <button class="btn btn-success">Apprendre à mieux cultiver...</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    <div class="row elements">
+                        <div class="col-sm-4">
+                            <img src="./media/savourer.jpg" alt="savourer">
+                        </div>
+                        <div class="col-sm-8">
+                            <h3>Savourer</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam odio ullam deserunt numquam culpa. Rerum, fuga eum temporibus veritatis incidunt dolores quis quibusdam nostrum accusantium blanditiis quo, hic ratione porro!</p>
+                            <div class="button">
+                                <button class="btn btn-success">Déguster ses propres...</button>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>  
-      <div class="col-lg-3" id="rightPart">
-        <h2>Nos astuces</h2>
-          <div class="tips" style="background: url(./media/preparer.jpeg)no-repeat 50% 50%;">
-            <h4>Préparer la terre</h4>
-          </div>
-          <div class="tips" style="background: url(./media/enrichir.jpeg)no-repeat 50% 50%;">
-            <h4>Enrichir le sol</h4>
-          </div>
-          <div class="tips" style="background: url(./media/proteger.jpg)no-repeat 50% 50%;">
-            <h4>Protéger ses légumes</h4>
-          </div>
-          <div class="tips" style="background: url(./media/arroser.jpg)no-repeat 50% 50%;">
-            <h4>Comment bien arroser ?</h4>
-          </div>
-          <div class="tips" style="background: url(./media/quand-planter.jpeg)no-repeat 50% 50%;">
-            <h4>Quand planter ses semis ?</h4>
-          </div>
+            <div class="col-lg-3" id="rightPart">
+                <h2>Nos astuces</h2>
+                <div class="tips" style="background: url(./media/preparer.jpeg)no-repeat 50% 50%;">
+                    <h4>Préparer la terre</h4>
+                </div>
+                <div class="tips" style="background: url(./media/enrichir.jpeg)no-repeat 50% 50%;">
+                    <h4>Enrichir le sol</h4>
+                </div>
+                <div class="tips" style="background: url(./media/proteger.jpg)no-repeat 50% 50%;">
+                    <h4>Protéger ses légumes</h4>
+                </div>
+                <div class="tips" style="background: url(./media/arroser.jpg)no-repeat 50% 50%;">
+                    <h4>Comment bien arroser ?</h4>
+                </div>
+                <div class="tips" style="background: url(./media/quand-planter.jpeg)no-repeat 50% 50%;">
+                    <h4>Quand planter ses semis ?</h4>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <div id="transition">
-      <img src="./media/transition.png" alt="rateau">
-    </div>
-
-    <div id="newsletter">
-      <h4>Recever une nouvelle astuce tous les jours, inscrivez vous à notre newsletter !</h4>
-      <div class="input-group">
-        <input type="email" class="form-control" placeholder="entrez votre mail...">
-        <div class="input-group-append">
-          <button class="btn btn-success" type="button">Soumettre</button>
+        <div id="transition">
+            <img src="./media/transition.png" alt="râteau">
         </div>
-      </div>
-    </div>
-  </main>
 
-  <footer>
-    <img src="./media/logo.png" alt="logo">
-    <p>fromScratch(); 2020 ©</p>
-  </footer>
- 
-  <script src="jquery.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+        <div id="newsletter">
+            <h4>Recever une nouvelle astuce tous les jours, inscrivez-vous à notre newsletter !</h4>
+            <div class="input-group">
+                <input type="email" class="form-control" placeholder="entrez votre mail...">
+                <div class="input-group-append">
+                    <button class="btn btn-success" type="button">Soumettre</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <img src="./media/logo.png" alt="logo">
+        <p>MélissaRbtc; 2021 ©</p>
+    </footer>
+
+    <script src="./jquery.min.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
+
 </body>
 </html>
