--- a/media/portfolio/P.3/index.html
+++ b/media/portfolio/P.3/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SpaceX - Travel Agency</title>
-  
-  <link rel="shortcut icon" href="./media/icon.png">
+
+  <link rel="stylesheet" href="./media/icon.png">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
 </head>
-
-<body>
-<div class="gradient">
+<div>
   <header>
     <div class="title">
       <a href="http://www.spacex.com" target="_blank">
@@ -41,20 +39,21 @@
 
     <div class="offers">
       <div class="perspective">
+
         <div class="perspective__3d">
-          <div class="perspective__3d--card" style="background:url(./media/off1.jpeg);">
+          <div class="perspective__3d--card" style="background: url(./media/off1.jpeg);">
           <h2>A weekend in space</h2>
           <span>from $5.000</span>
           </div>
         </div>
         <div class="perspective__3d">
-          <div class="perspective__3d--card" style="background:url(./media/off2.jpg);">
+          <div class="perspective__3d--card" style="background: url(./media/off2.jpg);">
           <h2>Take a rest on the moon</h2>
           <span>from $15.000</span>
           </div>
         </div>
         <div class="perspective__3d">
-          <div class="perspective__3d--card" style="background:url(./media/off3.jpg);">
+          <div class="perspective__3d--card" style="background: url(./media/off3.jpg);">
           <h2>Holidays on Mars</h2>
           <span>from $45.000</span>
           </div>
@@ -63,27 +62,27 @@
     </div>
 
     <div class="button">
-      <a href="http://www.spacex.com" target="_blank">
+      <a href="http://www.spacex.com" target="_blank"></a>
         <svg height="60" width="320">
-          <rect class="button__rect" height="60" width="320" />
+          <rect class="button__rect" height="60" width ="320" />
         </svg>
         <div class="button__text">GET STARTED</div>
-      </a>
     </div>
   </main>
 
   <footer>
     <div class="network">
-      <a href="http://twitter.fr"><i class="fa fa-twitter"></i></a>
-      <a href="http://facebook.fr"><i class="fa fa-facebook"></i></a>
-      <a href="http://flickr.fr"><i class="fa fa-flickr"></i></a>
-      <a href="http://instagram.com"><i class="fa fa-instagram"></i></a>
-      <a href="#">fromScratch(); © 2020</a>
+      <a href="https://twitter.com/MelissaRbtc"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/melissa-rbtc"><i class="fa fa-github"></i></a>
+      <a href="http://www.linkedin.com/in/melissa-rbtc/"><i class="fa fa-linkedin"></i></a>
+
+      <a href="#">Mélissa-rbtc ; © 2021</a>
     </div>
   </footer>
+  
 
-  <script type="text/javascript" src="assets/jquery.min.js" ></script>
+  <script type="text/javascript" src="assets/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
-</div>
+
 </body>
 </html>
