Ajout other-skills

--- a/index.html
+++ b/index.html
@@ -106,10 +106,6 @@
         <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%; background-color: #F05033"> 25%</div>
       </div>
 
-      <div class="bar"><img src="./media/GitHub.png" alt="gitHub-icon"> GITHUB</div>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-animated" role="progressbar" aria-valuenom="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%; background-color: #1C191B"> 35%</div>
-      </div>
     </div>
   </section>
 
@@ -261,6 +257,62 @@
           <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section id="other-skills">
+    <h3>Autres compétences</h3>
+    <div class="cloud">*
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="800">
+        <span style="color: tomato;margin-left: -90%;">GitHub</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="3800">
+        <span style="color: blueviolet;margin-left: 80%;">Curiosité</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="3800">
+        <span style="color: coral;margin-left: 0%;">Organisation</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="800">
+        <span style="color: slateblue;margin-left: -50%;">Travail à distance</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="2800">
+        <span style="color: magenta;margin-left: 50%;">Vscode</span>
+      </div>
+      <div class="aos-item" 
+      data-aos="fade-zoom-in"
+      data-aos-delay="500"
+      data-aos-duration="3800">
+        <span style="color: goldenrod;margin-left: -10%;">Autonomie</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="2800">
+        <span style="color: indianred;margin-left: -80%;">Résilience</span>
+      </div>
+      <div class="aos-item" 
+            data-aos="fade-zoom-in"
+            data-aos-delay="500"
+            data-aos-duration="800">
+        <span style="color: cornflowerblue;margin-left: 80%;">Rigueur</span>
+      </div>
+    </div>
+  </section>
 
 
     </div>
