--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           data-aos-duration="1000"
           data-aos-once="true"> 
       <div id="autodidacte">
-        <h4><i class="fa fa-university"></i> Apprensissage autodidacte</h4>
+        <h4><i class="fa fa-university"></i> Apprentissage autodidacte</h4>
         <div class="counter">
           <div class="data">
-            <div class="counter-value" data-count="680">0</div>
+            <div class="counter-value" data-count="880">0</div>
             <span>Heures de code</span>
           </div>
           <div class="data">
@@ -262,16 +262,16 @@
 
   <section id="other-skills">
     <h3>Autres compétences</h3>
-    <div class="cloud">*
+    <div class="cloud">
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="800"
             data-aos-duration="800">
         <span style="color: tomato;margin-left: -90%;">GitHub</span>
       </div>
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="400"
             data-aos-duration="3800">
         <span style="color: blueviolet;margin-left: 80%;">Curiosité</span>
       </div>
@@ -283,40 +283,93 @@
       </div>
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="700"
             data-aos-duration="800">
         <span style="color: slateblue;margin-left: -50%;">Travail à distance</span>
       </div>
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="200"
             data-aos-duration="2800">
         <span style="color: magenta;margin-left: 50%;">Vscode</span>
       </div>
       <div class="aos-item" 
       data-aos="fade-zoom-in"
-      data-aos-delay="500"
+      data-aos-delay="300"
       data-aos-duration="3800">
         <span style="color: goldenrod;margin-left: -10%;">Autonomie</span>
       </div>
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="1000"
             data-aos-duration="2800">
         <span style="color: indianred;margin-left: -80%;">Résilience</span>
       </div>
       <div class="aos-item" 
             data-aos="fade-zoom-in"
-            data-aos-delay="500"
+            data-aos-delay="700"
             data-aos-duration="800">
         <span style="color: cornflowerblue;margin-left: 80%;">Rigueur</span>
       </div>
     </div>
   </section>
 
-
+  <section id="hobbies">
+    <div class="slider"> 
+      <h3>Hobbies</h3>
+      <!-- gif dev -->
+      <div class="slide active-slide">
+        <div class="container">
+               <img class="gif" src="https://media4.giphy.com/media/NHvv0Bo3oGq1eTBDd1/giphy-downsized.gif?cid=f7fb5bbagh96q4dap8qkifj2god05qzgcwbzcn6f96wgs6p8&rid=giphy-downsized.gif&ct=g" alt="developpement">
+               <p>Apprendre le développement Web</p> 
+        </div>
+      </div>
+      <!-- gif WOW -->
+      <div class="slide">
+        <div class="container">
+            <img class="gif" src="https://media.giphy.com/media/8vHSt3vau0pFh0ZemM/giphy.gif" alt="world of warcraft">
+           <p>Jouer aux jeux vidéos</p>
+        </div>
+      </div>
+      <!-- gif musique -->
+      <div class="slide">
+        <div class="container">
+            <img class="gif" src="https://media.giphy.com/media/J6UJjUEg1ReqjMIAlQ/giphy.gif" alt="écouter de la musique">
+           <p>Ecouter de la musique</p>
+        </div>
+      </div>
+      <!-- gif NBA -->
+      <div class="slide">
+        <div class="container">
+           <img class="gif" src="https://media.giphy.com/media/xTiTniV6HHXkTBUiv6/giphy.gif" alt="Regarder la NBA">
+           <p>Regarder la NBA</p>
+        </div>
+      </div>
+      <!-- gif TBBT -->
+      <div class="slide">
+        <div class="container">
+            <img class="gif" src="https://media.giphy.com/media/3o6fJ2WggvBDJv7ohG/giphy.gif" alt="<The Big Bang Theory">
+           <p>Regarder des séries</p>
+        </div>
+      </div>   
+    </div>  
+    <!-- Slider nav -->
+    <div class="slider-nav"> 
+      <a href="" class="arrow-prev"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
+      <ul class="slider-dots">
+        <li class="dot active-dot">&bull;</li>
+        <li class="dot">&bull;</li>
+        <li class="dot">&bull;</li>
+        <li class="dot">&bull;</li>
+        <li class="dot">&bull;</li>
+      </ul>
+      <a href="" class="arrow-next"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a> 
     </div>
+    <!--End of slide show-->
   </section>
+
+
+
 
 
 
