--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
       <a href="" class="arrow-next"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a> 
     </div>
     <!--End of slide show-->
+    <iframe src="https://open.spotify.com/embed/playlist/3vAn4kHlDEyHIiRb5QCh5t" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </section>
 
 
