--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>
         <div class="legende">
           <h4><img src="./media/bootstrap.png" alt="bootstrap"> <img src="./media/html.png" alt="html"> <img src="./media/css.png" alt="css"> Site E-commerce</h4>
-          <p>Réalisation d'un site e-commerce avec le framework bootstrap</p>
+          <p>Réalisation d'un site vitrine e-commerce avec le framework bootstrap</p>
           <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
         </div>
       </div>
@@ -253,7 +253,7 @@
         </div>
         <div class="legende">
           <h4> <img src="./media/sass.png" alt="sass"> <img src="./media/js.png" alt="js"> <img src="./media/html.png" alt="html"> <img src="./media/css.png" alt="css"> Site vitrine pour agence spatial</h4>
-          <p>Réalisation d'un site avec l'aide de SASS et JavaScript</p>
+          <p>Réalisation d'un site vitrine avec l'aide de SASS et JavaScript</p>
           <a href="https://github.com/melissa-rbtc/MelissaRobert_2_29042021" target="_blank"><h5><i class="fa fa fa-github"></i> > code source du projet</h5></a>
         </div>
       </div>
@@ -369,14 +369,39 @@
     <iframe src="https://open.spotify.com/embed/playlist/3vAn4kHlDEyHIiRb5QCh5t" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </section>
 
+  <footer>
+    <h3>contactez-moi</h3>
+    <div class="footer-icons">
+      <div>
+        <a href="https://www.linkedin.com/in/melissa-rbtc/" class="network">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </div>
+      <div>
+        <a href="https://github.com/melissa-rbtc" class="network">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+      <div>
+        <a href="https://twitter.com/MelissaRbtc" class="network">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </div>
+    </div>
 
 
-
-
+    <div class="arrow">
+      <a href="#">
+        <i class="fa fa-sort-up"></i>
+      </a>
+    </div>
+    <p>Mélissa Rbtc ; © 2021</p>
+  </footer>
 
   <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
   <script src="./assets/js/typed.min.js" type="text/javascript"></script>
   <script src="./assets/aos/aos.js" type="text/javascript"></script>
+
   <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
